src/sample/Errors/C0142.st
// C0142: A local variable named '{name}' is already defined in '{scope}'
FUNCTION_BLOCK FB_C0142
    
    VAR
        _a: INT;
        _a: INT;
    END_VAR
END_FUNCTION_BLOCK